--- a/cozinha.html
+++ b/cozinha.html
@@ -31,19 +31,19 @@
         </header>
         <main>
             <section id="ambiente">
-                <h2>Escolha por ambiente</h2>
+                <h2>Cozinha</h2>
                 <div class="container">
                         <article>
-                            <a href="cozinha.html"><img src="images/cozinha.png" alt="Cozinha"></a>
-                            <h3><a href="cozinha.html">Cozinha</a></h3>
+                            <a href="#"><img src="images/piaplanejada.png" alt="Pia cinza"></a>
+                            <h3><a href="#">Pia cinza</a></h3>
                         </article>
                         <article>
-                            <a href="#"><img src="images/quarto.png" alt="Quarto"></a>
+                            <a href="#"><img src="images/armariocinza.png" alt="Armário cinza"></a>
                             <h3><a href="#">Quarto</a></h3>
                         </article>
                         <article>
-                            <a href="#"><img src="images/infantil.png" alt="Infantil"></a>
-                            <h3> <a href="#">Infantil</a> </h3>
+                            <a href="#"><img src="images/cozinhapequenacompleta.png" alt="Cozinha Pequena Completa"></a>
+                            <h3> <a href="#">Cozinha Pequena Completa</a> </h3>
                         </article>
                         <article>
                             <a href="#"><img src="images/sala-de-jantar.png" alt="Sala de Jantar"></a>
