--- a/sobrenos.html
+++ b/sobrenos.html
@@ -16,6 +16,12 @@
                     <a href="index.html"><img src="images/logo.png" id="logo" alt="Logo Daniel Móveis"></a>
                 </h1>
                 <nav id="menu">
+                    <label id="botaomenu" for="aberturamenu">
+                        <div class="linha"></div>
+                        <div class="linha"></div>
+                        <div class="linha"></div>
+                    </label>
+                    <input type="checkbox" id="aberturamenu">
                     <ul id="primeiralinha">
                         <li> <a href="index.html">Início</a> </li>
                         <li> <a href="sobrenos.html">Sobre a Daniel Móveis</a> </li>
@@ -41,10 +47,10 @@
                 </div>
             </section>
         </main>
-        <section id="faleconosco">
+        <footer id="faleconosco">
             <div id="logorodape">
                 <img src="images/logorodape.png" alt="Logo Daniel Móveis">
             </div>
-        </section>
+        </footer>
     </body>
 </html>
